# Agentic-RAG-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/agents/: rag_agent.py  router.py  weather_agent.py
src/evaluation/: evaluators.py
src/pipeline/: graph.py
src/services/: embeddings.py  vector_store.py  weather.py
tests/: test_pipeline.py  test_rag.py  test_weather.py
